Added github link

--- a/index.html
+++ b/index.html
@@ -216,7 +216,15 @@
 
       <!-- FOOTER -->
       <footer>
-        <p>Coded by Daniela Pereira</p>
+        <p>
+          <a
+            href="https://github.com/danielapereira11/SheCodesPlus_Weather-App"
+            target="_blank"
+            id="code-link"
+            >Open source code</a
+          >
+          by Daniela Pereira
+        </p>
         <button class="contact-button">Contact me</button>
       </footer>
     </div>
