Minor corrections and refactoring
Minor corrections in terms of spelling, refactoring code and additions to the notes with things to not forget.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <!-- COLUMN 1 -->
         <div class="col">
           <!-- Col 1 ROW 1 -->
-          <div class="row greating-row">
-            <div class="col greating">
+          <div class="row greeting-row">
+            <div class="col greeting">
               <h1>
                 <span id="greeting">Hello! 🖐</span><br /><span id="tip"
                   >Have a great day! 👌</span
@@ -53,9 +53,9 @@
             <div class="col-5">
               <div class="today-current-date-time">
                 <p>
-                  <span id="current-date">Wed, August 4</span><br /><span
+                  <span id="current-date"></span><br /><span
                     id="current-time"
-                    >14:23</span
+                    ></span
                   >
                 </p>
               </div>
