Title and footer alteration

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <title>W4 Homework</title>
+    <title>Vanilla Weather App</title>
   </head>
   <body>
     <div class="container">
@@ -221,9 +221,9 @@
             href="https://github.com/danielapereira11/SheCodesPlus_Weather-App"
             target="_blank"
             id="code-link"
-            >Open source code</a
+            >Open-source code</a
           >
-          by Daniela Pereira
+          by Daniela Pereira | Hosted on Netlify
         </p>
         <button class="contact-button">Contact me</button>
       </footer>
