Added alt to weather icon and changed weather.main to weather.description

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <div class="today-current-weather">
                 <p>
                   <span id="current-weather"></span
-                  ><span><img src="" id="weather-icon" /></span>
+                  ><span><img src="" alt="" id="weather-icon" /></span>
                 </p>
               </div>
             </div>
