Temperature conversion for min/max Temps

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
             <div class="col today today-min-max-temp">
               <p class="today-max-temp">
                 <i class="fas fa-long-arrow-alt-up"></i>
-                <span id="max-temp"></span>ºC
+                <span id="max-temp"></span>
               </p>
               <p class="today-min-temp">
                 <i class="fas fa-long-arrow-alt-down"></i>
-                <span id="min-temp"></span>ºC
+                <span id="min-temp"></span>
               </p>
             </div>
           </div>
