color change in link for temperature conversion

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <a
                   href="#"
                   id="celcius-link"
+                  class="active unit-link"
                   title="See the temperature in Celcius"
                   ><span class="temp-unit align-text-top">ºC</span></a
                 >
@@ -79,6 +80,7 @@
                 <a
                   href="#"
                   id="fahrenheit-link"
+                  class="not-active unit-link"
                   title="See the temperature in Fahrenheit"
                   ><span class="ºF temp-unit align-text-top">ºF</span></a
                 >
