--- a/index.html
+++ b/index.html
@@ -92,14 +92,20 @@
           </div>
           <!-- Col 1 ROW 4 -->
           <div class="row justify-content-start today-current-weather">
-            <div class="col-6 weather-description align-self-center">
+            <div
+              class="col-md-5 col-sm-6 weather-description align-self-center"
+            >
               <p>
                 <span id="weather-description"></span
                 ><span><img src="" alt="" id="weather-icon" /></span>
               </p>
             </div>
             <div class="col align-self-center">
-              <p>Wind Speed: <span id="wind-speed"></span> km/h</p>
+              <p>
+                <span class="wind-speed">Wind Speed: </span
+                ><span id="wind-speed"></span>
+                <span>km/h</span>
+              </p>
             </div>
           </div>
         </div>
