Added titles to buttons

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
           type="button"
           class="input-group-text"
           id="current-location-button"
+          title="See current location information"
         >
           <i class="fas fa-map-marker-alt"></i>
         </button>
@@ -157,7 +158,7 @@
           autocomplete="off"
           ;
         />
-        <button type="submit" class="btn search-button" id="search-button">
+        <button type="submit" class="btn search-button" id="search-button" title="Search">
           <i class="fas fa-search"></i>
         </button>
       </form>
