Fixing responsiveness on unit links

--- a/index.html
+++ b/index.html
@@ -62,23 +62,25 @@
             <div class="col today">
               <span id="today-current-temp">
                 <span id="current-temp-value"></span>
-                <a
-                  href="#"
-                  id="celcius-link"
-                  class="active unit-link"
-                  title="See the temperature in Celcius"
-                  ><span class="temp-unit align-text-top">ºC</span></a
-                >
-                <span class="temp-unit align-text-top">|</span>
-                <a
-                  href="#"
-                  id="fahrenheit-link"
-                  class="not-active unit-link"
-                  title="See the temperature in Fahrenheit"
-                  ><span class="ºF temp-unit align-text-top">ºF</span></a
+                <span>
+                  <a
+                    href="#"
+                    id="celcius-link"
+                    class="active unit-link temp-unit align-text-top"
+                    title="See the temperature in Celcius"
+                    >ºC |
+                  </a>
+                  <a
+                    href="#"
+                    id="fahrenheit-link"
+                    class="not-active unit-link ºF temp-unit align-text-top"
+                    title="See the temperature in Fahrenheit"
+                    >ºF</a
+                  ></span
                 >
               </span>
             </div>
+
             <div class="col today-min-max-temp">
               <p class="today-max-temp">
                 <i class="fas fa-long-arrow-alt-up"></i>
