Added dummy data for forecast through JS

--- a/index.html
+++ b/index.html
@@ -181,58 +181,8 @@
           justify-content-evenly
           next-temp
         "
-      >
-        <div class="col">
-          <div class="card">
-            <div class="card-body">
-              <p class="card-title">THURSDAY</p>
-              <p class="card-text"><i class="fas fa-cloud"></i></p>
-              <p class="card-text">20ºC</p>
-              <p class="card-text">12ºC</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <div class="card-body">
-              <p class="card-title">FRIDAY</p>
-              <p class="card-text"><i class="fas fa-sun"></i></p>
-              <p class="card-text">24ºC</p>
-              <p class="card-text">14ºC</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <div class="card-body">
-              <p class="card-title">SATURDAY</p>
-              <p class="card-text"><i class="fas fa-sun"></i></p>
-              <p class="card-text">25ºC</p>
-              <p class="card-text">12ºC</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <div class="card-body">
-              <p class="card-title">SUNDAY</p>
-              <p class="card-text"><i class="fas fa-cloud-sun-rain"></i></p>
-              <p class="card-text">22ºC</p>
-              <p class="card-text">10ºC</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <div class="card-body">
-              <p class="card-title">MONDAY</p>
-              <p class="card-text"><i class="fas fa-sun"></i></p>
-              <p class="card-text">24ºC</p>
-              <p class="card-text">13ºC</p>
-            </div>
-          </div>
-        </div>
-      </div>
+        id="forecast"
+      ></div>
       <hr />
 
       <!-- FOOTER -->
