--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <title>Vanilla Weather App</title>
+    <title>Daniela's Weather App</title>
   </head>
   <body>
     <div class="container">
