Added the greeting function in terms of the time of day

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <title>Daniela's Weather App</title>
+    <title>Daniela's Weather App 🌡</title>
   </head>
   <body>
     <div class="container">
@@ -34,8 +34,8 @@
           <!-- Col 1 ROW 1 -->
           <div class="row greeting-row">
             <div class="col greeting">
-              <h1>
-                <span id="greeting">Hello! 🖐</span><br /><span id="tip"
+              <h1 id="greeting-tip">
+                <span id="greeting"></span>&nbsp;&nbsp;&nbsp;<span id="tip"
                   >Have a great day! 👌</span
                 >
               </h1>
