--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
           <!-- Col 1 ROW 1 -->
           <div class="row greeting-row">
             <div class="col greeting">
-              <h1 id="greeting-tip">
-                <span id="greeting"></span>&nbsp;&nbsp;&nbsp;<span id="tip"
-                  >Have a great day! 👌</span
-                >
-              </h1>
+              <h1><span id="greeting"></span><br /><span id="tip"></span></h1>
             </div>
           </div>
 
