--- a/index.html
+++ b/index.html
@@ -192,7 +192,11 @@
           >
           by Daniela Pereira | Hosted on Netlify
         </p>
-        <button class="contact-button">Contact me</button>
+        <button class="contact-button">
+          <a href="mailto:brunadaniela.pereira.27@gmail.com" id="contact-link"
+            >Contact me</a
+          >
+        </button>
       </footer>
     </div>
     <script src="src/index.js"></script>
