--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <title>Daniela's Weather App 🌡</title>
   </head>
-  <body>
+  <body background="/Images/background_kite.svg">
     <div class="container">
       <!-- FIRST ROW WITH THE INFO -->
       <div class="row align-items-center main-row">
