Revert "Alter background image location"
This reverts commit 674c13e358ad83011db98ef22c8258aa459f45ce.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <title>Daniela's Weather App 🌡</title>
   </head>
-  <body background="/Images/background_kite.svg">
+  <body>
     <div class="container">
       <!-- FIRST ROW WITH THE INFO -->
       <div class="row align-items-center main-row">
