Alteration of background images with the weather

--- a/index.html
+++ b/index.html
@@ -113,21 +113,21 @@
         <div class="col-2 imagem-column">
           <div class="row image-row">
             <img
-              src="Images/undraw_raining.svg"
+              src="Images/main_raining.svg"
               alt="raining umbrella"
               class="img-fluid"
             />
           </div>
           <div class="row image-row">
             <img
-              src="Images/undraw_fall.svg"
+              src="Images/main_fall.svg"
               alt="girl playing with leaves"
               class="img-fluid"
             />
           </div>
           <div class="row image-row">
             <img
-              src="Images/manypixels_snow.svg"
+              src="Images/main_snow.svg"
               alt="snowman in the sun"
               class="img-fluid"
             />
