--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </p>
               </div>
             </div>
-            <div class="col today">
+            <div class="col col-sm-5 col-md-4 today">
               <span id="today-current-temp">
                 <span id="current-temp-value"></span>
                 <span>
@@ -77,7 +77,7 @@
               </span>
             </div>
 
-            <div class="col today-min-max-temp">
+            <div class="col col-sm-2 col-md-3 today-min-max-temp">
               <p class="today-max-temp">
                 <i class="fas fa-long-arrow-alt-up"></i>
                 <span id="max-temp"></span>
