Resize of temperature columns 3

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </p>
               </div>
             </div>
-            <div class="col col-sm-4 col-md-4 today">
+            <div class="col-5 col-sm-4 today">
               <span id="today-current-temp">
                 <span id="current-temp-value"></span>
                 <span>
@@ -77,9 +77,7 @@
               </span>
             </div>
 
-            <div
-              class="col col-sm-2 col-md-3 align-self-center today-min-max-temp"
-            >
+            <div class="col-2 col-sm-3 today-min-max-temp">
               <p class="today-max-temp">
                 <i class="fas fa-long-arrow-alt-up"></i>
                 <span id="max-temp"></span>
